fixed nav and spacing

--- a/master.css
+++ b/master.css
@@ -193,6 +193,7 @@ margin-top: 2%;
 }
 .work-demo li{
   font-size: 1.2rem ;
+  list-style: none;
 }
 
 .updates{
